<resources>
    <string name="app_name">TMDBFLEXAPP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="fetured_list">Fetured List</string>
    <string name="papular_people">Papular People</string>
    <string name="trending">Trending</string>
    <string name="movies">Movies</string>
    <string name="more">More</string>
    <string name="tv_show">Tv Show</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Popular</string>
    <string name="toprated">TopRated</string>
    <string name="movie_tv_show_or_person">Movie, Tv Show or Person</string>
    <string name="back_button">Back Button</string>
</resources>